Empty charts are no longer visible.

--- a/src/app/classified-time-series/classified-time-series.component.css
+++ b/src/app/classified-time-series/classified-time-series.component.css
@@ -7,3 +7,16 @@
     float: left;
     width: 150px;
 }
+.hidden {
+	visibility: hidden;
+    height: 0px;
+}
+.centeredNotice {
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 15pt;
+    color: #878484;
+    font-weight: 400;
+}
