--- a/src/app/histogram/histogram.component.css
+++ b/src/app/histogram/histogram.component.css
@@ -21,3 +21,16 @@
   font-weight: 400;
   width: 100px;
 }
+.hidden {
+	visibility: hidden;
+    height: 0px;
+}
+.centeredNotice {
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 15pt;
+    color: #878484;
+    font-weight: 400;
+}
